--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -2,7 +2,7 @@
 
 .login-page {
   width: 360px;
-  padding: 8% 0 0;
+  padding: 5% 0 0;
   margin: auto;
 }
 .form {
@@ -94,10 +94,13 @@ body {
   background: -moz-linear-gradient(right, #76b852, #8DC26F);
   background: -o-linear-gradient(right, #76b852, #8DC26F);
   background: linear-gradient(to left, #76b852, #8DC26F);*/
-  background-image: url(/assets/bg.jpg);
+  background-image: url(../bg.jpg);
   background-repeat: no-repeat;
   background-size: 100%;
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;      
+}
+.hd {
+  margin-top: 5%;
 }
