--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -95,8 +95,11 @@ body {
   background: -o-linear-gradient(right, #76b852, #8DC26F);
   background: linear-gradient(to left, #76b852, #8DC26F);*/
   background-image: url(../bg.jpg);
+  background-position: center center;  
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #464646;
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;      
